set net.bridge.bridge sysctl props on compute nodes
This is a known issue with 7.2, and will be fixed after 7.2 is released

--- a/osp7_installer/ansible/osp-director.yml
+++ b/osp7_installer/ansible/osp-director.yml
@@ -10,6 +10,7 @@
     - osp-prep-for-overcloud
     - add-test-gateway-ip
     - osp-overcloud
+    - add-overcloud-host
     - osp-test-data
     - read-overcloudrc-props
     - rh-tempest
