Update to OSP 7.2 ga

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -14,23 +14,23 @@ undercloud_vlan = 3009
 
 yum_timeout = 120
 
-yum_repos = [{ 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.11.2/RH7-RHOS-7.0-director.repo' },
-             { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.11.2/RH7-RHOS-7.0.repo' },
+yum_repos = [{ 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-ga/rhel-7-server-openstack-7.0-director-rpms.repo' },
+             { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-ga/rhel-7-server-openstack-7.0-rpms.repo' },
              { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
 ;            { 'name': 'post.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post.repo' },
-;             { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
-;             { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
+             { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-optional-rpms.repo' },
+             { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-extras-rpms.repo' }
             ]
 
 cert_yum_repos = [
 ;                 { 'name': 'rhel-7-server-cert-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-cert-rpms.repo' },
-                 { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.11.2/RH7-RHOS-7.0.repo' },
+                 { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-ga/rhel-7-server-openstack-7.0-rpms.repo' },
                  { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
-;                  { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
-;                  { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
+;                  { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-optional-rpms.repo' },
+;                  { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-extras-rpms.repo' }
                  ]
 
-image_base_url = http://memory.cisco.com/osp7/rh-images/y2/7.2-2015-12-11.2/
+image_base_url = http://memory.cisco.com/osp7/rh-images/7.2-ga/
 disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic.tar', 'name': 'deploy-ramdisk-ironic.tar' },
               { 'url': '%(image_base_url)s/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
               { 'url': '%(image_base_url)s/overcloud-full.tar', 'name': 'overcloud-full.tar' }]
