--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -39,6 +39,8 @@ physical_ports = []
 physical_ports_external = []
 physical_ports_floating = []
 
+tempest_repo=redhat-openstack
+tempest_branch=kilo
 hack_in_undercloud_gateway_ip = true
 
 nfs_server_daemon = nfs-server
@@ -198,7 +200,8 @@ tempest_dir = /home/stack/cisco-tempest
 local_report_dir = ../../target/
 
 #ha_tenant_kill_orphans = True
-
+elasticsearch_host = "172.29.173.236:9200"
+elasticsearch_index = "test"
 #example step, used for printing vars
 [example]
 
