--- a/osp7_installer/ansible/roles/run_tests/tasks/main.yml
+++ b/osp7_installer/ansible/roles/run_tests/tasks/main.yml
@@ -19,15 +19,10 @@
   file: path="{{ tempest_dir }}" state=directory
 
 - name: Clone cisco-openstack
-  git: repo=https://github.com/cisco-openstack/tempest.git
+  git: repo=https://github.com/{{ tempest_repo }}/tempest.git
        dest={{ tempest_dir }}/tempest
-  when: specific is defined
+       version={{ tempest_branch }}
 
-- name: Clone cisco-openstack
-  git: repo=https://github.com/redhat-openstack/tempest.git
-       dest={{ tempest_dir }}/tempest
-       version=kilo
-  when: specific is not defined
 
 - name: copy etc folder
   shell: yes | cp -rf /etc/redhat-certification-openstack/* {{ tempest_dir }}/tempest/etc/
@@ -69,3 +64,37 @@
   fetch: src={{ tempest_dir }}/tempest/tempest_results.xml dest={{ lookup('env','WORKSPACE') }}/files/
         flat=yes
   when: test_names is defined
+
+- name: Generate a report in CSV format
+  shell: source .tox/full/bin/activate && testr last --subunit | subunit-1to2 | subunit2csv --output-to=tempest_results.csv
+        chdir={{ tempest_dir }}/tempest/
+  when: test_names is defined
+  ignore_errors: yes
+
+- name: delete unused lines
+  shell:  sed "/^[^\"]/d" -i tempest_results.csv
+           chdir={{ tempest_dir }}/tempest/
+  when: test_names is defined
+  ignore_errors: yes
+
+- name: download logstash
+  get_url: url=http://172.29.173.233/nightly/osp7/logstash-2.1.1.tar.gz dest={{ tempest_dir }} force=true
+
+- name: unpack logstash
+  shell: tar -xzvf logstash-2.1.1.tar.gz
+        chdir={{ tempest_dir }}
+
+- name:  Write logstash.conf
+  template: src=logstash.conf dest={{ tempest_dir }}/logstash-2.1.1/bin/logstash.conf owner=stack group=stack
+
+- name: install java
+  yum: name={{ item.name }}
+  with_items:
+    - { name: "java" }
+
+- name: start service to upload results
+  shell: ./logstash -f logstash.conf -w 1
+        chdir={{ tempest_dir }}/logstash-2.1.1/bin/
+  async: 200
+  poll: 50
+  ignore_errors: yes
