Adding patch for 260708 "Make multi-switch host successful when 1 active"

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -80,7 +80,11 @@ rpms_for_image = ""
 
 patch_infos = [ {'name': 'neutron',
                'path': '/usr/lib/python2.7/site-packages/neutron',
-               'ref': 'refs/changes/89/249389/1', }
+               'ref': 'refs/changes/89/249389/1',
+              },
+              {'name': 'networking-cisco',
+              'path': '/usr/lib/python2.7/site-packages/networking_cisco',
+              'ref': 'refs/changes/08/260708/2' },
               ]
 ;patch_infos = [ {'name': 'networking-cisco',
 ;              'path': '/usr/lib/python2.7/site-packages/networking_cisco',
