--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -232,6 +232,9 @@ deploy_undercloud = False
 [test_cloud]
 playbook = test-cloud.yml
 
+[update_overcloud_image]
+playbook = update_overcloud_image.yml
+
 [ansible]
 playbook = osp-director.yml
 
