--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -199,6 +199,8 @@ rhel_pool = dummy_pool
 tempest_dir = /home/stack/cisco-tempest
 local_report_dir = ../../target/
 
+logstash_dir = /opt/logstash/
+
 #ha_tenant_kill_orphans = True
 elasticsearch_host = "172.29.173.236:9200"
 elasticsearch_index = "test"
