--- a/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
@@ -43,6 +43,7 @@
 #    - { template_file: 'network-environment.yaml' }
     - { template_file: 'networking-cisco-environment.yaml' }
     - { template_file: 'nfs-environment.yaml' }
+    - { template_file: 'disable-selinux.yaml' } # only used for OSP8 beta
 
 - name:  Write deploy_overcloud.sh
   template: src=deploy_overcloud.sh dest=/home/stack/bin/deploy_overcloud.sh owner=stack group=stack mode=755
