--- a/osp7_installer/ansible/roles/osp-overcloud/templates/nfs-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/nfs-environment.yaml
@@ -1,4 +1,4 @@
-parameters:
+parameter_defaults:
   ## Whether to enable iscsi backend for Cinder.
   CinderEnableIscsiBackend: false
   ## Whether to enable rbd (Ceph) backend for Cinder.
