Writes osp7_installl build info on the undercloud '/etc/osp_install_run.json'

--- a/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
@@ -1,5 +1,18 @@
 ---
 
+### write osp_install_run.json
+- name: Get osp_install git info
+  local_action: shell git describe --always
+  register: git_describe
+
+- name: Get undercloud timestamp
+  local_action: shell date
+  register: undercloud_date
+
+- name:  Write osp_install_run.json
+  template: src=osp_install_run.json dest=/etc/osp_install_run.json group=stack
+### end write osp_install_run.json
+
 - name: Make templates dir
   sudo_user: stack
   file: path=/home/stack/templates state=directory mode=0755
