Updating with more robust solution to DE1224
Patches puppet manifest to include restart vm's on boot property

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -204,6 +204,9 @@ logstash_dir = /opt/logstash/
 #ha_tenant_kill_orphans = True
 elasticsearch_host = "172.29.173.236:9200"
 elasticsearch_index = "test"
+
+resume_guests_state_on_host_boot = true
+
 #example step, used for printing vars
 [example]
 
