- Add role to do the external net/subnet creates (move out of same role as deploy) - Install ansible on the director - use director's ansible and http://gitlab.cisco.com/tiswanso/openstack-tools.git   to setup filebeat on overcloud nodes after deploy via   osp-overcloud role

--- a/osp7_installer/ansible/overcloud-redeploy.yml
+++ b/osp7_installer/ansible/overcloud-redeploy.yml
@@ -5,6 +5,7 @@
     - delete-overcloud
     - add-test-gateway-ip
     - osp-overcloud
+    - osp-overcloud-post
     - add-overcloud-host
     - osp-test-data
     - read-overcloudrc-props
