--- a/osp7_installer/conf_common/bxb.conf
+++ b/osp7_installer/conf_common/bxb.conf
@@ -7,6 +7,9 @@ overcloud_vlan = 1202
 deploy_with_flavors=true
 
 controller_separate_public_nic = False
+setup_default_route = False
+
+filebeat_port =  8944
 
 [cobbler]
 cobbler_api_url = http://10.86.7.58/cobbler_api
