--- a/osp7_installer/ansible/osp-director.yml
+++ b/osp7_installer/ansible/osp-director.yml
@@ -10,6 +10,7 @@
     - osp-prep-for-overcloud
     - add-test-gateway-ip
     - osp-overcloud
+    - osp-overcloud-post
     - add-overcloud-host
     - osp-test-data
     - read-overcloudrc-props
