--- a/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
@@ -138,10 +138,14 @@ resources:
                   addresses:
                   -
                     ip_netmask: {get_param: ExternalIpSubnet}
+            {% if setup_default_route %}
+
                   routes:
                   -
                     ip_netmask: 0.0.0.0/0
                     next_hop: {get_param: ExternalInterfaceDefaultRoute}
+
+            {% endif %}
             {% if controller_tenant_nic %}
 
             -
