--- a/osp7_installer/ansible/osp-director.yml
+++ b/osp7_installer/ansible/osp-director.yml
@@ -14,6 +14,7 @@
     - osp-test-data
     - read-overcloudrc-props
     - rh-tempest
+    - scale-patch
     - report_status
 
 #- hosts: overcloud_controller
