--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -87,6 +87,10 @@ patch_infos = [ {'name': 'neutron',
               {'name': 'networking-cisco',
               'path': '/usr/lib/python2.7/site-packages/networking_cisco',
               'ref': 'refs/changes/08/260708/2' },
+	      {'name': 'neutron',
+               'path': '/usr/lib/python2.7/site-packages/neutron',
+               'patchfile': 'ml2_mech_driver_debug.patch',
+              },
               ]
 ;patch_infos = [ {'name': 'networking-cisco',
 ;              'path': '/usr/lib/python2.7/site-packages/networking_cisco',
