Make sure virtualenv is installed prior to using for ansible setup

--- a/osp7_installer/ansible/roles/director_setup_ansible/tasks/main.yml
+++ b/osp7_installer/ansible/roles/director_setup_ansible/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: make sure virtualenv is installed
+  yum: name=python-virtualenv state=present
+
 ### setup venv & pip install ansible
 - name: setup venv & pip install ansible
   sudo_user: stack
