Enable debugs on the overcloud deploy.

--- a/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/networking-cisco-environment.yaml
@@ -49,6 +49,7 @@ parameter_defaults:
   NetworkNexusVxlanMcastRanges: '0.0.0.0:0.0.0.0'
 
 parameters:
+  Debug: "{{ overcloud_debug }}"
   controllerExtraConfig:
     neutron::server::api_workers: 0
     neutron::agents::metadata::metadata_workers: 0
