--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -96,6 +96,8 @@ patch_infos = [ {'name': 'neutron',
 ;              'ref': 'refs/changes/89/249389/1', }
 ;              ]
 
+overcloud_debug = True
+
 # default heat config
 network_ucsm_ip = 127.0.0.1
 network_ucsm_username = admin
