Add Tempest role and rename step

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -248,8 +248,8 @@ playbook = test-cloud.yml
 [update_overcloud_image]
 playbook = update_overcloud_image.yml
 
-[jenkins]
-playbook = jenkins.yml
+[run_tests_by_regex]
+playbook = run_tests_by_regex.yml
 
 [ansible]
 playbook = osp-director.yml
