Add tox version

--- a/osp7_installer/ansible/roles/run_tests/tasks/main.yml
+++ b/osp7_installer/ansible/roles/run_tests/tasks/main.yml
@@ -60,7 +60,7 @@
   when: specific is defined
 
 - name: install tox
-  shell: pip install tox virtualenv
+  shell: pip install tox==2.0 virtualenv
 
 - name: Create venv
   shell: cd {{ tempest_dir }}/tempest && tox -efull --notest
