Add UCSM and port_security config

--- a/osp7_installer/ansible/roles/logstash_client/templates/logstash.conf
+++ b/osp7_installer/ansible/roles/logstash_client/templates/logstash.conf
@@ -34,6 +34,21 @@ ruby {
      add_tag => "network"
   }
   }
+  if "ucsm" in [class] or "ucsm" in [test_id]{
+  mutate {
+     add_tag => "ucsm"
+  }
+  }
+  if "arp_poisoning" in [class] or "arp_poisoning" in [test_id]{
+  mutate {
+     add_tag => "arp_poisoning"
+  }
+  }
+  if "port_security" in [class] or "port_security" in [test_id]{
+  mutate {
+     add_tag => "port_security"
+  }
+  }
  if "volume" in [test_id] or "volume" in [class]{
   mutate {
      add_tag => "volume"
