--- a/osp7_installer/ansible/roles/run_tests/templates/tempest_cisco.cfg
+++ b/osp7_installer/ansible/roles/run_tests/templates/tempest_cisco.cfg
@@ -7,10 +7,18 @@ test_packet_sizes = 64, 128, 256
 test_packet_count = 10
 
 [cisco]
-user_name = {{ sw_username }}
-user_pw = {{ sw_password }}
-leaf1 = {{ sw_1_name }}
-leaf1_ip = {{ sw_1 }}
-leaf2 = {{ sw_2_name }}
-leaf2_ip = {{ sw_2 }}
+user_name = {{ switch_tempest_section.0.username | default() }}
+user_pw = {{ switch_tempest_section.0.password | default() }}
+leaf1 = {{ switch_tempest_section.0.hostname | default() }}
+leaf1_ip = {{ switch_tempest_section.0.sw | default() }}
+leaf2 = {{ switch_tempest_section.1.hostname | default() }}
+leaf2_ip = {{ switch_tempest_section.1.sw | default() }}
 
+[ucsm]
+ucsm_ip={{ network_ucsm_ip | default() }}
+ucsm_username={{ network_ucsm_username |  default() }}
+ucsm_password={{ network_ucsm_password |  default() }}
+ucsm_host_dict={{ ucsm_host_dict.stdout |  default() }}
+network_node_list={{ network_node_host.stdout | default() }}
+eth_names=eth0,eth1
+virtual_functions_amount=0
