Correcting net-list typo

--- a/osp7_installer/ansible/roles/osp-overcloud-post/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud-post/tasks/main.yml
@@ -4,7 +4,7 @@
   sudo_user: stack
   shell: >
         source /home/stack/overcloudrc &&
-        neutron nova |
+        neutron net-list |
         grep -q nova ||
         neutron net-create nova
         --router:external=True
